--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -84,7 +84,7 @@ stages:
                   - task: ManualValidation@1
                     timeoutInMinutes: 23160 # 2 weeks
                     inputs:
-                      approvers: jason.dynes1@HMCTS.net, andrew.mcdevitt@hmcts.net, ara.islam1@hmcts.net
+                      approvers: jason.dynes1@HMCTS.net, andrew.mcdevitt@hmcts.net, ara.islam1@hmcts.net, naveen.sriram@hmcts.net
                       instructions: Please validate the build configuration and resume
 
           - job: TerraformPlanApply
